# eigen-js

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  index.js  package-lock.json  package.json
src/: AbstractExpression.cpp  AbstractExpression.hpp  BinaryMatrixExpression.cpp  BinaryMatrixExpression.hpp  BinaryMatrixOperators.cpp  BinaryMatrixOperators.hpp  ColumnVector.cpp  ColumnVector.hpp  ColumnVector.hxx  ExpressionTree.cpp  ExpressionTree.hpp  ExpressionType.cpp  ExpressionType.hpp  Matrix.cpp  Matrix.hpp  Matrix.hxx  MatrixGeneration.cpp  MatrixGeneration.hpp  MatrixGeneration.hxx  RowVector.cpp  RowVector.hpp  RowVector.hxx  TerminalExpression.cpp  TerminalExpression.hpp  TerminalMatrixExpression.cpp  TerminalMatrixExpression.hpp  index.cpp
tests/: constructor.js  test.js
